# CsoundQt

./: .gitignore  .gitmodules  BUILDING  BUILDING.md  BUILDING_jh.md  Building_on_Windows.md  CMakeLists.txt  COPYING  ChangeLog  CsoundQt.desktop  Custom.cmake.ex  Doxyfile  INSTALLING.md  README.md  Release Notes 0.6.0.txt  Release Notes 0.6.1.txt  Release Notes 0.7.0.txt  TODO for 0.9.6  TODO-0.9.8.md  config.pri  csoundqt.desktop  get-csPerfThread-hpp.sh  get_csPerfThread-hpp.sh  nightly_build.py  nightly_build_jh.py  org.csoundqt.CsoundQt.yaml  org.flatpak.csoundqt.json  pythonscripts.qrc  qcs-haiku.pro  qcs-macx.pro  qcs-unix.pro  qcs-win32.pro  qcs.pro  qutecsound.kdevelop  sources.cmake  srcrelease.sh  svnauthors.xml
.github/workflows/: build.yml
ClearQuteCsoundPrefs/: ClearQuteCsoundPrefs.pro  clearqutecsoundprefs.cpp  clearqutecsoundprefs.h  clearqutecsoundprefs.ui  main.cpp
QuteApp/: QuteApp.pro  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  application.qrc  deploy_quteapp.py  main.cpp  opcodes.xml  quteapp.cpp  quteapp.h  quteappwizard.cpp  quteappwizard.h  quteappwizard.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  simpledocument.cpp  simpledocument.h  test.csd  tester.csd
doc/: QuteCsound Quick Reference (0.4)-de.odt  QuteCsound Quick Reference (0.4)-es.odt  QuteCsound Quick Reference (0.4)-fr.odt  QuteCsound Quick Reference (0.4)-it.odt  QuteCsound Quick Reference (0.4)-it_en.odt  QuteCsound Quick Reference (0.4)-tr.odt  QuteCsound Quick Reference (0.4).odt  QuteCsoundQuick Reference(0.4)-de.odt
examples/: 8_Chn_Player.csd  Additive_Synth.csd  Audio_Input_Test.csd  Audio_Output_Test.csd  Audio_Thru_Test.csd  Display_Widget.csd  Formant_Synth.csd  Graph_Widget.csd  IO_Test.csd  Keyboard_Control.csd  Menu_Widget.csd  No_Reinit.csd  Oscillator_Aliasing.csd  Phase_Mod_Synth.csd  Reserved_Channels.csd  Rms.csd  SF_Play_from_HD.csd  SF_Play_from_HD_2.csd  SF_Play_from_buffer.csd  SF_Play_from_buffer_2.csd  SF_Record.csd  Scope_Widget.csd  Simple_Convolution.csd  Simple_FM_Synth.csd  Simple_Subtractive.csd  Slider_Widget.csd  Toot1.csd  Toot4.csd  Toot5.csd  Universal_Convolution.csd  checkboxwidget.csd  circle.csd  controllerwidget.csd  graphwidget.csd  lineedit.csd  menuwidget.csd  miditest.csd  noisered.csd  noreinit.csd  reinit.csd  (+10 more)
examples/Examples/: Circle.csd  Cross_Synthesis.csd  Event_Panel.csd  Just_Intonation.csd  Keyboard_Control.csd  Live_Granular.csd  Mouse_Control.csd  Universal_Convolution.csd
examples/Getting Started/: Score_Tricks.csd
examples/Html5 Support/: Html_file_in_CsoundQt.html  Minimal_Html_Example.csd
examples/Live Collection/: Live_Accordizer.csd  Live_Delay_Feedback.csd  Live_Granular.csd  Live_RM_AM.csd
examples/Miscellaneous/: Autotuner.csd  Binaural_Panning.csd  Circle.csd  Circle_Map.csd  Cross_Synthesis.csd  Event_Panel.csd  Filter_lab.csd  IR_Creator.csd  Just_Intonation.csd  Keyboard_Control.csd  Live_Granular.csd  MIDI_Tunings.csd  No_Reinit.csd  Oscillator_Aliasing.csd  Pseudostereo.csd  Pvstencil.csd  SF_Granular.csd  Simple_Convolution.csd  Spatialization.csd  Spatialization_5.1.csd  Universal_Convolution.csd
examples/Music/: Bach-Invention_1.csd  Boulanger-Trapped_in_Convert.csd  Chowning-Stria.csd  Kung-Xanadu.csd  Riley-In_C.csd  Stockhausen-Studie_II.csd
examples/Plugins/: CircularBuffer.csd
examples/Synths/: Additive_Synth.csd  B6_Hammond.csd  Diffamator.csd  Formant_Synth.csd  Imitative_Additive.csd  Mono_Synth.csd  Phase_Mod_Synth.csd  Piano_phase.csd  Pipe_Synth.csd  Scanned_Synthesis_Sandbox.csd  Simple_FM_Synth.csd  Simple_Subtractive.csd  Sruti-Drone_Box.csd  String_Phaser.csd  Waveform_Mix.csd
examples/Tutorial/: Score_Tricks.csd  Widgets_1.csd  Widgets_2.csd
examples/Useful/: ASCII_Key.csd  AudioMidiTest.csd  Audio_Input_Test.csd  Audio_Output_Test.csd  Audio_Thru_Test.csd  Envelope_Extractor.csd  File_to_Text.csd  IO_Test.csd  Jukebox.csd  MIDI_IO_Test.csd  MIDI_Layering.csd  MIDI_Recorder.csd  MIDI_Tunings.csd  Mixdown_Player.csd  Monome_basic.csd  Multichannel_Player.csd  SF_Merger.csd  SF_Play_from_HD.csd  SF_Play_from_HD_2.csd  SF_Play_from_buffer_2.csd  SF_Record.csd  SF_Snippets_Player.csd  SF_Splitter.csd  SpectrumAnalyzer.csd
examples/Widgets/: Button_Widget.csd  Checkbox_Widget.csd  Controller_Widget.csd  Display_Widget.csd  Graph_Widget.csd  Label_Widget.csd  Lineedit_Widget.csd  Menu_Widget.csd  Reserved_Channels.csd  Scope_Widget.csd  Scrollnumber_Widget.csd  Slider_Widget.csd  SpinBox_Widget.csd  String_Channels.csd  Widget_Panel.csd
images/: qtcs.icns  qtcs.xpm  qtcs32.xpm
make_appdir/: make-appimage-linux.sh
mime-types/: add_csound_mimetypes.sh  x-csound-csd.xml  x-csound-inc.xml  x-csound-orc.xml  x-csound-sco.xml  x-csound-udo.xml
release_notes/: Release Notes 0.9.2.1.md  Release Notes 0.9.2.2.md  Release notes 0.9.2.md  Release notes 0.9.3.md  Release notes 0.9.4.md  Release notes 0.9.5.md  Release notes 0.9.6.md  Release notes 0.9.7.md  Release notes 0.9.8.md  Release notes 1.1.0.md  Release notes 1.1.2.md  Release notes 1.1.3.md
src/: AudioMidiTest.csd  CsoundHtmlOnlyWrapper.cpp  CsoundHtmlOnlyWrapper.h  MyInfo.plist  about.cpp  about.h  about.ui  additionalfilespage.cpp  additionalfilespage.h  additionalfilespage.ui  appdetailspage.cpp  appdetailspage.h  appdetailspage.ui  application.qrc  appstyle-dark.css  appstyle-green.css  appstyle-white.css  appstyle.css  appwizard.cpp  appwizard.h  basedocument.cpp  basedocument.h  baseview.cpp  baseview.h  cefclient.cpp  cefclient.h  cefclient_qt.cpp  client_app.cpp  client_app.h  client_app_delegates.cpp  client_app_js.h  client_binding.cpp  client_binding.h  client_handler.cpp  client_handler.h  client_handler_qt.cpp  client_renderer.cpp  client_renderer.h  client_transfer.cpp  client_transfer.h  (+185 more)
src/QML/: ControlSlider.qml  Controls.qml  Key.qml  Keyboard.qml  TableEditor.qml  VirtualKeyboard.qml
src/Scripts/: invalue_chnget.py  invalues_for_widgets.py
templates/: csound+html-template.csd  csoundqt-or-webcsound-template.html  h  simple.csd  wasm-template.html
util/: categories.py  opcodeparser.py
(+1893 files in other folders)
